# SimpleGDI

./: README.md
Matrices/: CMakeLists.txt
Matrices/include/: Matrix.hpp
Matrices/src/: main.cpp
PrimitivesEditor/: CMakeLists.txt
PrimitivesEditor/include/: AppParams.hpp  CartesianCoordinate2D.hpp  Controller.hpp  CoordinateSystem.hpp  FunMode.hpp  HomogeneousCoordinate2D.hpp  Matrix.hpp  Model.hpp  TypeOfPrimitive.hpp  View.hpp
PrimitivesEditor/src/: Controller.cpp  Model.cpp  View.cpp  WinMain.cpp
